protocols/tests/snapshots/protocols__typecheck__tests__cond.snap
---
source: protocols/src/typecheck.rs
expression: content
---
warning: Inferred RHS type as BitVec(32) from LHS type BitVec(32).
   ┌─ tests/multipliers/mult_cond.prot:19:3
   │
19 │   dut.a := X;
   │   ^^^^^^^^^^^ Inferred RHS type as BitVec(32) from LHS type BitVec(32).

warning: Inferred RHS type as BitVec(32) from LHS type BitVec(32).
   ┌─ tests/multipliers/mult_cond.prot:20:3
   │
20 │   dut.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as BitVec(32) from LHS type BitVec(32).

error: dut.c is an output and thus cannot be assigned.
   ┌─ tests/multipliers/mult_cond.prot:30:3
   │
30 │   dut.c := 1'b1;
   │   ^^^^^^^^^^^^^^ dut.c is an output and thus cannot be assigned.
